--- a/css/news-reading.scss
+++ b/css/news-reading.scss
@@ -6,7 +6,7 @@ main {
     .top-nav {
         padding-top: 8px;
         margin: 0px 0 16px;
-
+        display: flex;
         img {
             display: inline-block;
             margin-right: 10px;
