--- a/css/news-bulletin.scss
+++ b/css/news-bulletin.scss
@@ -6,7 +6,8 @@ main {
     .top-nav {
         padding-top: 8px;
         margin: 0px 0 16px;
-
+        display:flex;
+        align-items: center;
         img {
             display: inline-block;
             margin-right: 10px;
@@ -113,7 +114,7 @@ main {
                     padding: 16px;
                     margin-bottom: 26px;
                     background-color: #F7F7F7;
-
+                    cursor: pointer;
                     .item-time {
                         color: #1652CC;
                     }
@@ -163,7 +164,7 @@ main {
                 }
 
                 a {
-
+                    
                     width: 30px;
                     height: 30px;
                     font-weight: bold;
@@ -209,7 +210,7 @@ main {
                     .listtext {
                         position: relative;
                         align-items: center;
-
+                        cursor: pointer;
                         .icon {
                             position: absolute;
                             top: 50%;
@@ -397,6 +398,7 @@ main {
                     a {
                         padding: 1px;
                         font-size: 14px;
+                        
                     }
                 }
             }
