--- a/css/party-building-work.css
+++ b/css/party-building-work.css
@@ -1,6 +1,14 @@
 main .main-content {
   background: rgba(175, 175, 175, 0.22);
 }
+main .top-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 main .education {
   background-color: #f8fafa;
   padding: 30px 0;
@@ -19,6 +27,9 @@ main .education .swiper-slide {
 }
 main .education .swiper-slide p {
   margin: 20px 0 22px;
+}
+main .education .swiper-container {
+  padding-bottom: 50px;
 }
 main .education .swiper-pagination {
   width: 99px;
