--- a/css/student-work.css
+++ b/css/student-work.css
@@ -33,6 +33,14 @@ main .support-desc .support-list li .detail-desc {
   padding: 15px 3.0729vw;
   background-color: rgba(31, 31, 32, 0.6);
 }
+main .top-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 main .counselor-team {
   padding-top: 5.26vw;
   padding-bottom: 2.968vw;
@@ -62,23 +70,31 @@ main .teacher-photo {
   overflow: hidden;
   width: 80%;
   height: 80%;
+  cursor: pointer;
 }
 main .teacher-photo img {
   width: 100%;
   height: 100%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
   -webkit-transition: -webkit-transform 0.3s;
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s;
 }
 main .teacher-photo:hover img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 @media screen and (min-width: 768px) {
   main .student-support {
     padding: 3.4896vw 0 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  main .support-desc .support-list li {
+    cursor: pointer;
   }
 }
 @media screen and (min-width: 1920px) {
