--- a/css/student-work.scss
+++ b/css/student-work.scss
@@ -48,6 +48,11 @@ main {
         }
     }
 
+    .top-nav{
+        display: flex;
+        align-items: center;
+    }
+
     // 辅导员描述
     .counselor-team {
         padding-top: 5.26vw;
@@ -89,16 +94,18 @@ main {
         overflow: hidden;
         width: 80%;
         height: 80%;
+        cursor: pointer;
 
         img {
             width: 100%;
             height: 100%;
+            transform: scale(1);
             transition: transform 0.3s;
         }
 
         &:hover {
             img {
-                transform: scale(1.1);
+                transform: scale(0.9);
             }
         }
     }
@@ -124,6 +131,7 @@ main {
         .support-desc {
             .support-list {
                 li {
+                    cursor: pointer;
                     .includeImg {
                         // padding-top:2.917vw;
                     }
