--- a/css/style.scss
+++ b/css/style.scss
@@ -304,7 +304,7 @@ html {
         margin-bottom: 18px;
 
         p {
-            padding: 7px;
+            margin: 7px;
         }
 
         a {
@@ -328,7 +328,7 @@ html {
     }
 }
 
-@media screen and(max-width:1440px) {
+@media screen and (max-width:1440px) {
     main {
         .section1 {
             align-items: center;
@@ -415,7 +415,7 @@ html {
 
 
             p {
-                padding: 8px;
+                margin: 8px;
             }
 
             a {
@@ -507,7 +507,7 @@ html {
             margin-bottom: 1.979vw;
 
             p {
-                padding: 0.729vw;
+                margin: 0.729vw;
             }
         }
     }
@@ -597,7 +597,7 @@ html {
             margin-bottom: 38px;
 
             p {
-                padding: 8px;
+                margin: 8px;
             }
         }
     }
