--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ html {
 
 .branch-activity {
   background-color: #fff;
-  padding: 30px 0 40px;
+  padding: 0px 0 40px;
 }
 
 .branch-activity h3 {
@@ -456,7 +456,7 @@ html {
     font-size: 1.042vw;
   }
   .branch-activity {
-    padding: 2.604vw 0 3.229vw;
+    padding: 0 0 3.229vw;
   }
   .branch-activity h3 {
     margin-bottom: 2.8125vw;
@@ -516,7 +516,7 @@ html {
     bottom: -24px;
   }
   .branch-activity {
-    padding: 50px 0 62px;
+    padding: 0px 0 62px;
   }
   .branch-activity h3 {
     margin-bottom: 54px;
