--- a/css/style.scss
+++ b/css/style.scss
@@ -290,7 +290,7 @@ html {
 // 支部活动
 .branch-activity {
     background-color: #fff;
-    padding: 30px 0 40px;
+    padding: 0px 0 40px;
 
     h3 {
         text-align: center;
@@ -328,7 +328,7 @@ html {
     }
 }
 
-@media screen and(max-width:1440px) {
+@media screen and (max-width:1440px) {
     main {
         .section1 {
             align-items: center;
@@ -496,7 +496,7 @@ html {
 
     .branch-activity {
 
-        padding: 2.604vw 0 3.229vw;
+        padding: 0 0 3.229vw;
 
         h3 {
             margin-bottom: 2.8125vw;
@@ -587,7 +587,7 @@ html {
     }
 
     .branch-activity {
-        padding: 50px 0 62px;
+        padding: 0px 0 62px;
 
         h3 {
             margin-bottom: 54px;
