--- a/css/apply-forUs.css
+++ b/css/apply-forUs.css
@@ -4,6 +4,10 @@ main {
   padding-bottom: 4.565vw;
 }
 
+main .top-bj img {
+  width: 100%;
+}
+
 main .content-main {
   padding: 2.9167vw 0 1.771vw;
 }
@@ -120,8 +124,9 @@ main .school .school-main .school-list .school-item .school-text {
 
 main .financially {
   margin-top: 22px;
-  padding: 3.021vw;
-  background: url(../img/apply/financially-bj.png);
+  padding: 3.021vw 0;
+  background: url(../img/apply/financially-bj.png) no-repeat;
+  background-size: 100% 100%;
 }
 
 main .financially .financially-title {
@@ -141,18 +146,6 @@ main .financially .financially-main .financially-item li {
   border-radius: 5px;
   color: #FFFFFF;
   padding: 12px 15px 23px 15px;
-}
-
-main .financially .financially-main .financially-item li .financially-hr {
-  width: 90%;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-main .financially .financially-main .financially-item li .financially-text {
-  font-size: 0.833vw;
-  font-weight: 400;
-  padding: 2px 7px 2px 7px;
-  line-height: 1.5625vw;
 }
 
 main .growUp .growUp-main .growUp-item {
@@ -389,7 +382,7 @@ main .consult .consult-main .main-item .main-map .main-map-conent img {
     margin-top: 60px;
   }
   main .financially {
-    padding: 58px 0;
+    padding: 58px 0 30px;
   }
   main .financially .financially-main .financially-item {
     padding-top: 77px;
